# example-cli-rs

./: Cargo.toml  README.md  justfile
algorithms/src/: exponential.rs  gcd.rs  lcm.rs  lib.rs  primes_up_to.rs
common/: Cargo.toml
common/src/: lib.rs
common/src/console/: input.rs  mod.rs  print_err.rs
games/: Cargo.toml
games/src/guessing/: envs.rs  main.rs  mod.rs
main/: Cargo.toml
main/src/: main.rs
tests/algorithms/: exponential.bats  gcd.bats  lcm.bats  primes_up_to.bats
tests/games/: guessing.bats
tests/tools/: base_converter.bats  person_generator.bats  query_params_parser.bats
tools/: Cargo.toml
tools/src/: lib.rs  query_params_parser.rs
tools/src/base_converter/: base.rs  main.rs  mod.rs
tools/src/person_generator/: main.rs  mod.rs  person.rs
