[package]
name = "games"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
common = { version = "0.1.0", path = "../common" }
envy = "0.4.2"
rand = "0.8.5"
serde = { version = "1.0.196", features = ["serde_derive"] }
