[package]
name = "main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
algorithms = { version = "0.1.0", path = "../algorithms" }
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
common = { version = "0.1.0", path = "../common" }
games = { version = "0.1.0", path = "../games" }
tools = { version = "0.1.0", path = "../tools" }
