[package]
name = "tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
chrono = "0.4.34"
common = { version = "0.1.0", path = "../common" }
csv = "1.3.0"
derive_more = "0.99.17"
once_cell = "1.19.0"
regex = "1.10.3"
serde = "1.0.196"
serde_json = "1.0.113"
